[metadata]
name = microviewer
url = https://github.com/seung-lab/microviewer/
summary = Visualize 3D numpy arrays in the browser.
description-file =
	README.md
author = William Silversmith
author-email = ws9@princeton.edu
home-page = https://github.com/seung-lab/microviewer/
license=License :: OSI Approved :: GNU Lesser General Public License v2 or later (LGPLv2+)
classifier =
	Intended Audience :: Developers
	Development Status :: 4 - Beta
	License :: OSI Approved :: GNU Lesser General Public License v2 or later (LGPLv2+)
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10
	Programming Language :: Python :: 3.11
	Programming Language :: Python :: 3.12
	Programming Language :: Python :: 3.13
	Topic :: Utilities
	Topic :: Scientific/Engineering :: Image Processing

[global]
setup-hooks =
	pbr.hooks.setup_hook

[files]
packages = 
	microviewer
	microviewer_cli

[wheel]
universal = 0